add new java features 22-24